--- a/client/src/myStyles.scss
+++ b/client/src/myStyles.scss
@@ -7,6 +7,14 @@ h1 {
     margin-bottom: 1em;
 }
 
+#usrsStoriesSec {
+  margin-left: 1em;
+}
+
+#exampleSec {
+  margin-left: 1em;
+}
+
 ul {
     list-style-type: none;
 }
@@ -17,7 +25,7 @@ li {
 
 #exampleUsageUl {
     position: relative;
-    left: -2em;
+    margin-left: -2em;
 }
 
 #returnSection {
@@ -26,6 +34,7 @@ li {
 
 #frontEndSection {
     margin-top: 1em;
+    margin-left: 1em;
     padding-bottom: 1em;
     border-top: 2px solid black;
     border-bottom: 2px solid black;
