--- a/client/src/myStyles.scss
+++ b/client/src/myStyles.scss
@@ -8,11 +8,11 @@ h1 {
 }
 
 #usrsStoriesSec {
-  margin-left: 1em;
+  margin-left: 2em;
 }
 
 #exampleSec {
-  margin-left: 1em;
+  margin-left: 2em;
 }
 
 ul {
@@ -34,10 +34,13 @@ li {
 
 #frontEndSection {
     margin-top: 1em;
-    margin-left: 1em;
     padding-bottom: 1em;
     border-top: 2px solid black;
     border-bottom: 2px solid black;
+}
+
+#frontEndContent {
+    margin-left: 1.5em;
 }
 
 button {
