--- a/views/index.html
+++ b/views/index.html
@@ -6,10 +6,12 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <base href="/">
   <title>Metric Imperial Converter</title>
-<link href="../public/main.css" rel="stylesheet"></head>
+  <link href="../public/main.css" rel="stylesheet">
+</head>
 
 <body>
   <div id="app"></div>
-<script type="text/javascript" src="../public/main.js"></script></body>
+  <script type="text/javascript" src="../public/main.js"></script>
+</body>
 
 </html>
